@@ -27,7 +27,6 @@ import com.doggydr.demo.repositorio.VetRepository;
 import com.doggydr.demo.servicio.TreatmentService;
 import com.doggydr.demo.servicio.TreatmentServiceImpl;
 
-
 @ActiveProfiles("test")
 @ExtendWith(MockitoExtension.class)
 public class TreatmentServiceTestMock {
@@ -43,21 +42,24 @@ public class TreatmentServiceTestMock {
 
     @Test
     public void TreatmentService_add_Treatment() {
-    
+
         Treatment treatment = new Treatment("Tratamiento de fiebre",
                 Arrays.asList(
-                    new Medicine("Paracetamol", 100, 50, 0.50, 1.00), 
-                    new Medicine("Ibuprofeno", 200, 120, 0.30, 0.80)),
-                "Reduce la fiebre en pacientes", 
-                new Vet("Daniel Carvajal", "General", "https://universidadeuropea.com/resources/media/images/medicina-veterinaria-800x450.original.jpg", "daniC", 10131415L, 310123123, "daniel@gmail.com", "passDaniel", true),
-                new Pet("Perry", "French Poodle", 2, "Otitis", 3.4, "https://wowmascota.com/wp-content/uploads/2019/05/pets-753464_640.jpg", true)
-        );
+                        new Medicine().builder().name("Paracetamol").availableUnits(100).soldUnits(50).cost(0.50)
+                                .salesPrice(1.00).build(),
+                        new Medicine().builder().name("Ibuprofeno").availableUnits(200).soldUnits(120).cost(0.30)
+                                .salesPrice(0.80).build()),
+                "Reduce la fiebre en pacientes",
+                new Vet("Daniel Carvajal", "General",
+                        "https://universidadeuropea.com/resources/media/images/medicina-veterinaria-800x450.original.jpg",
+                        "daniC", 10131415L, 310123123, "daniel@gmail.com", "passDaniel", true),
+                new Pet("Perry", "French Poodle", 2, "Otitis", 3.4,
+                        "https://wowmascota.com/wp-content/uploads/2019/05/pets-753464_640.jpg", true));
 
         System.out.println("\n\n tr med:" + treatment.getMedicines().size());
 
         when(treatmentRepository.save(treatment)).thenReturn(
-            treatment
-        );
+                treatment);
 
         Treatment newTreatment = treatmentService.add(treatment);
 
@@ -68,28 +70,35 @@ public class TreatmentServiceTestMock {
     public void TreatmentService_SearchAll_TreatmentList() {
 
         when(treatmentRepository.findAll()).thenReturn(
-            List.of(
-                new Treatment("Tratamiento de fiebre",
-                    Arrays.asList(
-                        new Medicine("Paracetamol", 100, 50, 0.50, 1.00), 
-                        new Medicine("Ibuprofeno", 200, 120, 0.30, 0.80)),
-                    "Reduce la fiebre en pacientes", 
-                    new Vet("Daniel Carvajal", "General", "https://universidadeuropea.com/resources/media/images/medicina-veterinaria-800x450.original.jpg", "daniC", 10131415L, 310123123, "daniel@gmail.com", "passDaniel", true),
-                    new Pet("Perry", "French Poodle", 2, "Otitis", 3.4, "https://wowmascota.com/wp-content/uploads/2019/05/pets-753464_640.jpg", true) 
-                ), 
-                new Treatment("Tratamiento de alergia",
-                    Arrays.asList(
-                        new Medicine("Cetirizina", 150, 75, 0.40, 0.90), 
-                        new Medicine("Clorfenamina", 50, 30, 0.20, 0.60)),
-                    "Alivia los síntomas de la alergia en mascotas",
-                    new Vet("Carla Gómez", "Especialista en Dermatología", "https://veterinariaintegral.es/wp-content/uploads/2020/01/veterinaria.jpg", "carlaG", 10131678L, 310456789, "carla@gmail.com", "passCarla", true),
-                    new Pet("Max", "Golden Retriever", 5, "Dermatitis", 29.0, "https://cdn.pixabay.com/photo/2017/09/25/13/12/golden-retriever-2785074_960_720.jpg", true)
-                )
-            )
-        );
+                List.of(
+                        new Treatment("Tratamiento de fiebre",
+                                Arrays.asList(
+                                        new Medicine().builder().name("Paracetamol").availableUnits(100).soldUnits(50)
+                                                .cost(0.50).salesPrice(1.00).build(),
+                                        new Medicine().builder().name("Ibuprofeno").availableUnits(200).soldUnits(120)
+                                                .cost(0.30).salesPrice(0.80).build()),
+                                "Reduce la fiebre en pacientes",
+                                new Vet("Daniel Carvajal", "General",
+                                        "https://universidadeuropea.com/resources/media/images/medicina-veterinaria-800x450.original.jpg",
+                                        "daniC", 10131415L, 310123123, "daniel@gmail.com", "passDaniel", true),
+                                new Pet("Perry", "French Poodle", 2, "Otitis", 3.4,
+                                        "https://wowmascota.com/wp-content/uploads/2019/05/pets-753464_640.jpg", true)),
+                        new Treatment("Tratamiento de alergia",
+                                Arrays.asList(
+                                        new Medicine().builder().name("Amoxicilina").availableUnits(150).soldUnits(80)
+                                                .cost(0.70).salesPrice(1.50).build(),
+                                        new Medicine().builder().name("Aspirina").availableUnits(300).soldUnits(150)
+                                                .cost(0.25).salesPrice(0.75).build()),
+                                "Alivia los síntomas de la alergia en mascotas",
+                                new Vet("Carla Gómez", "Especialista en Dermatología",
+                                        "https://veterinariaintegral.es/wp-content/uploads/2020/01/veterinaria.jpg",
+                                        "carlaG", 10131678L, 310456789, "carla@gmail.com", "passCarla", true),
+                                new Pet("Max", "Golden Retriever", 5, "Dermatitis", 29.0,
+                                        "https://cdn.pixabay.com/photo/2017/09/25/13/12/golden-retriever-2785074_960_720.jpg",
+                                        true))));
 
         List<Treatment> treatments = treatmentService.SearchAll();
-        
+
         Assertions.assertThat(treatments).isNotNull();
         Assertions.assertThat(treatments.size()).isEqualTo(2);
     }
@@ -98,11 +107,10 @@ public class TreatmentServiceTestMock {
     public void TreatmentService_SearchById_Treatment() {
 
         when(treatmentRepository.findById(1l)).thenReturn(
-            Optional.ofNullable( new Treatment() )          
-        );
+                Optional.ofNullable(new Treatment()));
 
         Treatment treatment = treatmentService.SearchById(1l);
-        
+
         Assertions.assertThat(treatment).isNotNull();
     }
 
@@ -110,11 +118,10 @@ public class TreatmentServiceTestMock {
     public void TreatmentService_SearchByName_Treatment() {
 
         when(treatmentRepository.findByName("name")).thenReturn(
-            new Treatment()
-        );
+                new Treatment());
 
         Treatment treatment = treatmentService.SearchByName("name");
-        
+
         Assertions.assertThat(treatment).isNotNull();
     }
 
@@ -122,14 +129,12 @@ public class TreatmentServiceTestMock {
     public void TreatmentService_SearchByVetId_Treatment() {
 
         when(treatmentRepository.findByVetId(1l)).thenReturn(
-            List.of(
-                new Treatment(),
-                new Treatment()
-            )         
-        );
+                List.of(
+                        new Treatment(),
+                        new Treatment()));
 
         List<Treatment> treatments = treatmentService.SearchByVetId(1l);
-        
+
         Assertions.assertThat(treatments).isNotNull();
         Assertions.assertThat(treatments.size()).isEqualTo(2);
     }
@@ -137,15 +142,13 @@ public class TreatmentServiceTestMock {
     @Test
     public void TreatmentService_SearchByPetsId_Treatment() {
 
-        when(treatmentRepository.findByPetsId(1l)).thenReturn(
-            List.of(
-                new Treatment(),
-                new Treatment()
-            )         
-        );
+        when(treatmentRepository.findByPetId(1l)).thenReturn(
+                List.of(
+                        new Treatment(),
+                        new Treatment()));
 
         List<Treatment> treatments = treatmentService.SearchByPetId(1l);
-        
+
         Assertions.assertThat(treatments).isNotNull();
         Assertions.assertThat(treatments.size()).isEqualTo(2);
     }
@@ -153,21 +156,16 @@ public class TreatmentServiceTestMock {
     @Test
     public void TreatmentService_findPetsById() {
         Long treatmentId = 1L;
-        
-        List<Pet> pets = Arrays.asList(
-            new Pet("Perry", "French Poodle", 2, "Otitis", 3.4, "https://wowmascota.com/wp-content/uploads/2019/05/pets-753464_640.jpg", true),
-            new Pet("Lucas", "Labrador", 2, "Gastroenteritis", 6.1, "https://es.mypet.com/wp-content/uploads/sites/23/2021/03/ThinkstockPhotos-590080440.jpg?w=1024", true)
-        );
 
-        when(treatmentRepository.findPetsById(treatmentId)).thenReturn(pets);
+        Pet pet = new Pet("Perry", "French Poodle", 2, "Otitis", 3.4,
+                "https://wowmascota.com/wp-content/uploads/2019/05/pets-753464_640.jpg", true);
 
-        List<Pet> resultPets = treatmentService.SearchPetsById(treatmentId);
+        when(treatmentRepository.findPetById(treatmentId)).thenReturn(pet);
 
-        
-        Assertions.assertThat(resultPets).isNotNull();
-        Assertions.assertThat(resultPets.size()).isEqualTo(2);
-        Assertions.assertThat(resultPets.get(0).getNombre()).isEqualTo("Perry");
-        Assertions.assertThat(resultPets.get(1).getNombre()).isEqualTo("Lucas");
+        Pet resultPet = treatmentService.SearchPetById(treatmentId);
+
+        Assertions.assertThat(resultPet).isNotNull();
+        Assertions.assertThat(resultPet.getNombre()).isEqualTo("Perry");
     }
 
     @Test
@@ -175,15 +173,15 @@ public class TreatmentServiceTestMock {
         Long treatmentId = 1L;
 
         List<Medicine> medicines = Arrays.asList(
-            new Medicine("Paracetamol", 100, 50, 0.50, 1.00),
-            new Medicine("Ibuprofeno", 200, 120, 0.30, 0.80)
-        );
+                new Medicine().builder().name("Paracetamol").availableUnits(100).soldUnits(50).cost(0.50)
+                        .salesPrice(1.00).build(),
+                new Medicine().builder().name("Ibuprofeno").availableUnits(200).soldUnits(120).cost(0.30)
+                        .salesPrice(0.80).build());
 
         when(treatmentRepository.findMedicinesById(treatmentId)).thenReturn(medicines);
 
         List<Medicine> resultMedicines = treatmentService.SearchMedicinesById(treatmentId);
 
-        
         Assertions.assertThat(resultMedicines).isNotNull();
         Assertions.assertThat(resultMedicines.size()).isEqualTo(2);
         Assertions.assertThat(resultMedicines.get(0).getName()).isEqualTo("Paracetamol");
@@ -194,7 +192,7 @@ public class TreatmentServiceTestMock {
     public void TreatmentService_getTotalTreatments_long() {
 
         long expectedCount = 10L;
-        
+
         when(treatmentPetRepository.count()).thenReturn(expectedCount);
 
         long totalTreatments = treatmentService.getTotalTreatments();
